--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -48,6 +48,9 @@ const resourceLinks = [
         <a href="/blog/" class={`${linkClass} transition-colors`}>
           Blog
         </a>
+        <a href="/tools/" class={`${linkClass} transition-colors`}>
+          Tools
+        </a>
 
         <!-- Resources Dropdown -->
         <div class="relative group">
@@ -105,6 +108,9 @@ const resourceLinks = [
         </a>
         <a href="/blog/" class={`${linkClass} transition-colors`}>
           Blog
+        </a>
+        <a href="/tools/" class={`${linkClass} transition-colors`}>
+          Tools
         </a>
 
         <!-- Mobile Resources Section -->
